# flaskapp

./: .gitignore  Insomnia_2021-04-08.json  README.md  pyproject.toml
flaskapp/: dao.py  db.py  main.py
